--- a/RechnungComp/RechnungComp.csproj
+++ b/RechnungComp/RechnungComp.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7B019172-DDF9-45E6-9A72-1181772DA7EF}</ProjectGuid>
+    <ProjectGuid>{69390045-DDE8-49D8-AAEA-C06243D5EEC0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LagerComp</RootNamespace>
-    <AssemblyName>LagerComp</AssemblyName>
+    <RootNamespace>RechnungComp</RootNamespace>
+    <AssemblyName>RechnungComp</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,16 +39,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ILager.cs" />
-    <Compile Include="Produkt\IProdukt.cs" />
-    <Compile Include="Produkt\Repository\Entity\ProduktDetailsTyp.cs" />
-    <Compile Include="Produkt\Repository\Entity\ProduktNummerTyp.cs" />
+    <Compile Include="IRechnung.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\Entity\MeldungsNummerTyp.cs" />
+    <Compile Include="Repository\Entity\RechnungsNrTyp.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Logic\" />
-    <Folder Include="Produkt\Logic\" />
+    <ProjectReference Include="..\AuftragserfassungComp\AuftragserfassungComp.csproj">
+      <Project>{fd178803-d4dc-4400-962f-b140f5e796c7}</Project>
+      <Name>AuftragserfassungComp</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Kunde\KundeComp.csproj">
+      <Project>{d308a9b1-afc1-444d-9a47-66cbbd474e4b}</Project>
+      <Name>KundeComp</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
