--- a/AuftragserfassungComp/AuftragserfassungComp.csproj
+++ b/AuftragserfassungComp/AuftragserfassungComp.csproj
@@ -30,15 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentNHibernate">
-      <HintPath>..\packages\FluentNHibernate.1.3.0.733\lib\FluentNHibernate.dll</HintPath>
-    </Reference>
-    <Reference Include="Iesi.Collections">
-      <HintPath>..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
-    </Reference>
-    <Reference Include="NHibernate">
-      <HintPath>..\packages\NHibernate.3.3.3.4000\lib\Net35\NHibernate.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,19 +39,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuftragserfassungComp.cs" />
     <Compile Include="IAuftragserfassung.cs" />
-    <Compile Include="Logic\AngebotTyp.cs" />
-    <Compile Include="Logic\AuftragTyp.cs" />
+    <Compile Include="Logic\Auftragserfassung.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\AuftragserfassungRepo.cs" />
     <Compile Include="Repository\Entity\AngebotNummerTyp.cs" />
     <Compile Include="Repository\Entity\AngebotTyp.cs" />
     <Compile Include="Repository\Entity\AuftragNummerTyp.cs" />
     <Compile Include="Repository\Entity\AuftragStatusTyp.cs" />
     <Compile Include="Repository\Entity\AuftragTyp.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Kunde\KundeComp.csproj">
       <Project>{d308a9b1-afc1-444d-9a47-66cbbd474e4b}</Project>
