--- a/RechnungComp/RechnungComp.csproj
+++ b/RechnungComp/RechnungComp.csproj
@@ -51,6 +51,7 @@
     <Compile Include="IRechnung.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Entity\RechnungsNrTyp.cs" />
+    <Compile Include="Repository\Entity\RechnungsTyp.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AuftragserfassungComp\AuftragserfassungComp.csproj">
