--- a/AuftragserfassungComp/AuftragserfassungComp.csproj
+++ b/AuftragserfassungComp/AuftragserfassungComp.csproj
@@ -30,8 +30,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FluentNHibernate">
+      <HintPath>..\packages\FluentNHibernate.1.3.0.733\lib\FluentNHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="Iesi.Collections">
+      <HintPath>..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate">
+      <HintPath>..\packages\NHibernate.3.3.3.4000\lib\Net35\NHibernate.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SQLite">
+      <HintPath>..\packages\System.Data.SQLite.1.0.84.0\lib\net40\System.Data.SQLite.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data.SQLite.Linq">
+      <HintPath>..\packages\System.Data.SQLite.1.0.84.0\lib\net40\System.Data.SQLite.Linq.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,14 +54,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AuftragserfassungComp.cs" />
+    <Compile Include="AuftragserfassungKomp.cs" />
     <Compile Include="IAuftragserfassung.cs" />
     <Compile Include="Logic\Auftragserfassung.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AuftragserfassungRepo.cs" />
-    <Compile Include="Repository\Entity\AngebotNummerTyp.cs" />
+    <Compile Include="Repository\Entity\AngebotNrTyp.cs" />
     <Compile Include="Repository\Entity\AngebotTyp.cs" />
-    <Compile Include="Repository\Entity\AuftragNummerTyp.cs" />
+    <Compile Include="Repository\Entity\AuftragNrTyp.cs" />
     <Compile Include="Repository\Entity\AuftragStatusTyp.cs" />
     <Compile Include="Repository\Entity\AuftragTyp.cs" />
   </ItemGroup>
