--- a/HESCore/HESCore.csproj
+++ b/HESCore/HESCore.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Mappings\KundeMap.cs" />
     <Compile Include="Mappings\LagerMap.cs" />
     <Compile Include="Mappings\RechnungsMap.cs" />
+    <Compile Include="Mappings\TransportMap.cs" />
     <Compile Include="Persistance\Database.cs" />
     <Compile Include="Mappings\ProduktMap.cs" />
     <Compile Include="Programm.cs" />
