Sichten wieder angepasst und Transportkomponente bekommt nun einen Auftrag

--- a/TransportComp/TransportComp.csproj
+++ b/TransportComp/TransportComp.csproj
@@ -62,6 +62,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AuftragserfassungComp\AuftragserfassungComp.csproj">
+      <Project>{fd178803-d4dc-4400-962f-b140f5e796c7}</Project>
+      <Name>AuftragserfassungComp</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
