--- a/AuftragserfassungComp/AuftragserfassungComp.csproj
+++ b/AuftragserfassungComp/AuftragserfassungComp.csproj
@@ -60,14 +60,13 @@
     <Compile Include="Logic\Auftragserfassung.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AuftragserfassungRepo.cs" />
-    <Compile Include="Repository\Entity\AngebotNrTyp.cs" />
-    <Compile Include="Repository\Entity\AngebotTyp.cs" />
-    <Compile Include="Repository\Entity\AuftragNrTyp.cs" />
-    <Compile Include="Repository\Entity\AuftragStatusTyp.cs" />
-    <Compile Include="Repository\Entity\AuftragTyp.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <ProjectReference Include="..\HESLib\HESLib.csproj">
+      <Project>{0f0c51ec-8471-450f-bfa6-13e723cb559f}</Project>
+      <Name>HESLib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Kunde\KundeComp.csproj">
       <Project>{d308a9b1-afc1-444d-9a47-66cbbd474e4b}</Project>
       <Name>KundeComp</Name>
