--- a/HESClient/HESClient.csproj
+++ b/HESClient/HESClient.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{48CD264D-79FB-48E1-9F39-554177E811CE}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{C25AE170-E8F6-4FDF-A011-1242999C89B1}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EinkaufComp</RootNamespace>
-    <AssemblyName>EinkaufComp</AssemblyName>
+    <RootNamespace>HESClient</RootNamespace>
+    <AssemblyName>HESClient</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -29,18 +29,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentNHibernate">
-      <HintPath>..\packages\FluentNHibernate.1.3.0.733\lib\FluentNHibernate.dll</HintPath>
-    </Reference>
-    <Reference Include="Iesi.Collections">
-      <HintPath>..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
-    </Reference>
-    <Reference Include="NHibernate">
-      <HintPath>..\packages\NHibernate.3.3.3.4000\lib\Net35\NHibernate.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,28 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IEinkauf.cs" />
-    <Compile Include="Lieferant\Repository\Entity\LieferantNummerTyp.cs" />
+    <Compile Include="SimpleClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Callbacks.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Lieferant\Logic\" />
-    <Folder Include="Logic\" />
-    <Folder Include="Repository\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HESLib\HESLib.csproj">
       <Project>{0f0c51ec-8471-450f-bfa6-13e723cb559f}</Project>
       <Name>HESLib</Name>
     </ProjectReference>
-    <ProjectReference Include="..\LagerComp\LagerComp.csproj">
-      <Project>{7b019172-ddf9-45e6-9a72-1181772da7ef}</Project>
-      <Name>LagerComp</Name>
+    <ProjectReference Include="..\ProxyLib\ProxyLib.csproj">
+      <Project>{94e27e0f-874e-4e26-833f-0115bdbc3d09}</Project>
+      <Name>ProxyLib</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
