--- a/HESLib/HESLib.csproj
+++ b/HESLib/HESLib.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{48CD264D-79FB-48E1-9F39-554177E811CE}</ProjectGuid>
+    <ProjectGuid>{0F0C51EC-8471-450F-BFA6-13E723CB559F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EinkaufComp</RootNamespace>
-    <AssemblyName>EinkaufComp</AssemblyName>
+    <RootNamespace>HESLib</RootNamespace>
+    <AssemblyName>HESLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,15 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentNHibernate">
-      <HintPath>..\packages\FluentNHibernate.1.3.0.733\lib\FluentNHibernate.dll</HintPath>
-    </Reference>
-    <Reference Include="Iesi.Collections">
-      <HintPath>..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
-    </Reference>
-    <Reference Include="NHibernate">
-      <HintPath>..\packages\NHibernate.3.3.3.4000\lib\Net35\NHibernate.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,28 +39,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IEinkauf.cs" />
-    <Compile Include="Lieferant\Repository\Entity\LieferantNummerTyp.cs" />
+    <Compile Include="Entities\Auftragserfassung\AngebotNrTyp.cs" />
+    <Compile Include="Entities\Auftragserfassung\AngebotTyp.cs" />
+    <Compile Include="Entities\Auftragserfassung\AuftragNrTyp.cs" />
+    <Compile Include="Entities\Auftragserfassung\AuftragStatusTyp.cs" />
+    <Compile Include="Entities\Auftragserfassung\AuftragTyp.cs" />
+    <Compile Include="Entities\Kunde\KundenLevel.cs" />
+    <Compile Include="Entities\Kunde\KundenNrTyp.cs" />
+    <Compile Include="Entities\Kunde\KundeTyp.cs" />
+    <Compile Include="Entities\Lager\MeldungsDetailsTyp.cs" />
+    <Compile Include="Entities\Lager\MeldungsNummerTyp.cs" />
+    <Compile Include="Entities\Produkt\ProduktDetailsTyp.cs" />
+    <Compile Include="Entities\Produkt\ProduktNummerTyp.cs" />
+    <Compile Include="Entities\Rechnung\RechnungsNrTyp.cs" />
+    <Compile Include="Entities\Rechnung\RechnungsTyp.cs" />
+    <Compile Include="Entities\Transport\LieferdetailsTyp.cs" />
+    <Compile Include="Entities\Transport\LiefernummerTyp.cs" />
+    <Compile Include="Entities\Transport\TransportauftragNrTyp.cs" />
+    <Compile Include="Entities\Transport\TransportauftragTyp.cs" />
+    <Compile Include="IHes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Callbacks.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Lieferant\Logic\" />
-    <Folder Include="Logic\" />
-    <Folder Include="Repository\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\HESLib\HESLib.csproj">
-      <Project>{0f0c51ec-8471-450f-bfa6-13e723cb559f}</Project>
-      <Name>HESLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LagerComp\LagerComp.csproj">
-      <Project>{7b019172-ddf9-45e6-9a72-1181772da7ef}</Project>
-      <Name>LagerComp</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <Folder Include="Entities\Einkauf\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
