--- a/Kunde/KundeComp.csproj
+++ b/Kunde/KundeComp.csproj
@@ -52,13 +52,16 @@
     <Compile Include="IKunde.cs" />
     <Compile Include="Logic\Kunde.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\Entity\KundenLevel.cs" />
-    <Compile Include="Repository\Entity\KundenNrTyp.cs" />
-    <Compile Include="Repository\Entity\KundeTyp.cs" />
     <Compile Include="Repository\KundenRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HESLib\HESLib.csproj">
+      <Project>{0f0c51ec-8471-450f-bfa6-13e723cb559f}</Project>
+      <Name>HESLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
