--- a/ProxyLib/ProxyLib.csproj
+++ b/ProxyLib/ProxyLib.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{48CD264D-79FB-48E1-9F39-554177E811CE}</ProjectGuid>
+    <ProjectGuid>{94E27E0F-874E-4E26-833F-0115BDBC3D09}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EinkaufComp</RootNamespace>
-    <AssemblyName>EinkaufComp</AssemblyName>
+    <RootNamespace>ProxyLib</RootNamespace>
+    <AssemblyName>ProxyLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,17 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentNHibernate">
-      <HintPath>..\packages\FluentNHibernate.1.3.0.733\lib\FluentNHibernate.dll</HintPath>
-    </Reference>
-    <Reference Include="Iesi.Collections">
-      <HintPath>..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
-    </Reference>
-    <Reference Include="NHibernate">
-      <HintPath>..\packages\NHibernate.3.3.3.4000\lib\Net35\NHibernate.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,28 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IEinkauf.cs" />
-    <Compile Include="Lieferant\Repository\Entity\LieferantNummerTyp.cs" />
+    <Compile Include="IProxyClient.cs" />
+    <Compile Include="IProxyServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Callbacks.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Lieferant\Logic\" />
-    <Folder Include="Logic\" />
-    <Folder Include="Repository\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\HESLib\HESLib.csproj">
-      <Project>{0f0c51ec-8471-450f-bfa6-13e723cb559f}</Project>
-      <Name>HESLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LagerComp\LagerComp.csproj">
-      <Project>{7b019172-ddf9-45e6-9a72-1181772da7ef}</Project>
-      <Name>LagerComp</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <Compile Include="ProxyToClient.cs" />
+    <Compile Include="ProxyToServer.cs" />
+    <Compile Include="Services.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
