--- a/RechnungComp/RechnungComp.csproj
+++ b/RechnungComp/RechnungComp.csproj
@@ -52,14 +52,16 @@
     <Compile Include="Logic\Rechnung.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RechnungKomp.cs" />
-    <Compile Include="Repository\Entity\RechnungsNrTyp.cs" />
-    <Compile Include="Repository\Entity\RechnungsTyp.cs" />
     <Compile Include="Repository\RechnungRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AuftragserfassungComp\AuftragserfassungComp.csproj">
       <Project>{fd178803-d4dc-4400-962f-b140f5e796c7}</Project>
       <Name>AuftragserfassungComp</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HESLib\HESLib.csproj">
+      <Project>{0f0c51ec-8471-450f-bfa6-13e723cb559f}</Project>
+      <Name>HESLib</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
