Individuelle Ports pro Server, Umstellung auf Mysql, Persistente Konfiguration von NHibernate, Platz fuer Charts geschaffen, Anzahl verarbeiteter Clients pro Server aufgelistet, Ersetzen von abgestuerzten Servern in Liste bei neuer GUid

--- a/HESCore/HESCore.csproj
+++ b/HESCore/HESCore.csproj
@@ -39,6 +39,9 @@
     <Reference Include="Iesi.Collections">
       <HintPath>..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data">
+      <HintPath>..\packages\MySql.Data.6.6.5\lib\net40\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="NHibernate">
       <HintPath>..\packages\NHibernate.3.3.3.4000\lib\Net35\NHibernate.dll</HintPath>
     </Reference>
