--- a/HESCommunicationLib/HESCommunicationLib.csproj
+++ b/HESCommunicationLib/HESCommunicationLib.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HAPSARConnector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TDLConnector.cs" />
   </ItemGroup>
