--- a/HESCore/HESCore.csproj
+++ b/HESCore/HESCore.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Mappings\LagerMap.cs" />
     <Compile Include="Mappings\RechnungsMap.cs" />
     <Compile Include="Mappings\TransportMap.cs" />
+    <Compile Include="Mappings\ZahlungseingangTypMap.cs" />
     <Compile Include="Persistance\Database.cs" />
     <Compile Include="Mappings\ProduktMap.cs" />
     <Compile Include="Programm.cs" />
@@ -120,7 +121,7 @@
     <Content Include="x64\SQLite.Interop.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="x86\SQLite.Interop.dll">
+    <Content Include="x64\x86\SQLite.Interop.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
