--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,6 +3,9 @@
   <repository path="..\AuftragserfassungComp\packages.config" />
   <repository path="..\EinkaufComp\packages.config" />
   <repository path="..\Examples.FirstProject\packages.config" />
+  <repository path="..\HAPSARGetter\packages.config" />
+  <repository path="..\HAPSARPayment\packages.config" />
+  <repository path="..\HESCommunicationLib\packages.config" />
   <repository path="..\HESCore\packages.config" />
   <repository path="..\Kunde\packages.config" />
   <repository path="..\LagerComp\packages.config" />
